add_index_header

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <title>Kenji Racing Team</title>
 		<meta charset="utf-8"/>
-        <link rel="stylesheet" href="assets/css/main.css"/>
+        <link rel="stylesheet" href="css/main.css"/>
     </head>
     <body>
+        <header>
+            <h1><a href="index.html">Kenji Racing Team</a></h1>
+        </header>
+
         <p> base </p>
     </body>
 </html>
